<resources>
    <string name="app_name">EpiDroid</string>
    <string name="action_settings">Settings</string>

    <!-- Activities titles -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_modules">Modules</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_projects">Projects</string>
    <string name="title_activity_disconnect">Disconnect</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="connect_fail">Connection failed</string>
    <string name="param_login">login</string>
    <string name="param_pass">password</string>

    <!-- IDs -->
    <string name="popup_module">pModule</string>
    <string name="popup_projects">pProjects</string>
    <string name="login_progress">login_progress</string>
    <string name="login_form">login_form</string>
    <string name="module_name">module_name</string>
    <string name="module_grade">module_grade</string>
    <string name="module_infos">module_infos</string>
    <string name="dismiss">dismiss</string>

    <!-- Api Strings -->
    <string name="domain">domain</string>
    <string name="api_domain">"http://epitech-api.herokuapp.com/"</string>
    <string name="api_photos">"https://cdn.local.epitech.eu/userprofil/"</string>
    <string name="domain_infos">infos</string>
    <string name="domain_login">login</string>
    <string name="domain_user">user</string>
    <string name="domain_modules">modules</string>
    <string name="domain_yearbook">trombi</string>
    <string name="domain_module">module</string>
    <string name="domain_planning">planning</string>
    <string name="domain_projects">projects</string>
    <string name="domain_files">project/files</string>
    <string name="domain_project">project</string>
    <string name="domain_event">event</string>
    <string name="domain_token">token</string>
    <string name="domain_allmodules">allmodules</string>
    <string name="scolarYear">scolaryear</string>
    <string name="codeModule">codemodule</string>
    <string name="codeInstance">codeinstance</string>
    <string name="codeActivity">codeacti</string>
    <string name="code">code</string>
    <string name="codeEvent">codeevent</string>
    <string name="title_module">titlemodule</string>
    <string name="title_module2">title_module</string>
    <string name="event_registered">event_registered</string>
    <string name="description">description</string>

    <!-- Functions & request strings -->
    <string name="callback_images">imageCallback</string>
    <string name="callback_info">requestCallback</string>
    <string name="callback_user">userCallback</string>
    <string name="callback_modules">modulesCallback</string>
    <string name="callback_yearbook">yearbookCallback</string>
    <string name="callback_project">projectCallback</string>
    <string name="callback_token">callbackToken</string>
    <string name="callback">callback</string>
    <string name="request_method">requestMethod</string>
    <string name="request_method_post">POST</string>
    <string name="request_method_get">GET</string>
    <string name="request_method_delete">DELETE</string>

    <!-- Result fields strings -->
    <string name="token">token</string>
    <string name="picture">picture</string>
    <string name="current">current</string>
    <string name="logTime">netsoul</string>
    <string name="title">title</string>
    <string name="history">history</string>
    <string name="ns_stat">nsstat</string>
    <string name="ns_stat_active">active</string>
    <string name="credits">credits</string>
    <string name="gpa">gpa</string>
    <string name="planning_start">start</string>
    <string name="planning_end">end</string>
    <string name="spinner_title">Semesters</string>
    <string name="spinner_projects">Filters</string>
    <string name="filter_all_projects">All projects</string>
    <string name="filter_registered_projects">Only registered projects</string>
    <string name="filter_all_modules">Registered modules</string>
    <string name="filter_not_registered_modules">Non registered modules</string>
    <string name="you_registered">You registered</string>
    <string name="you_unregistered">You unregistered</string>
    <string name="register_failed">Failed registration</string>
    <string name="modules_title">Select a semester</string>
    <string name="projects_title">Select a filter</string>
    <string name="semester">semester</string>
    <string name="projects_view">projects</string>
    <string name="activity_title">acti_title</string>
    <string name="proj">proj</string>
    <string name="acti_type">type_acti_code</string>
    <string name="board">board</string>
    <string name="activites">activites</string>
    <string name="registered">registered</string>
    <string name="can_register">module_available</string>
    <string name="grade">student_grade</string>
    <string name="dispGrade">Grade: </string>
    <string name="action_example">Example action</string>
    <string name="response">response</string>
    <string name="activity">activity</string>
    <string name="yearbook_title">select a promotion</string>
    <string name="location_title">select a location</string>
    <string name="spinner_yearbook">promo</string>
    <string name="items">items</string>
    <string name="tokenCode">tokenvalidationcode</string>
    <string name="registered_success">Registered succesfully</string>
    <string name="token_validated">Token validated</string>
    <string name="isProject">is_projet</string>
    <string name="mark">note</string>
    <string name="location">location</string>
    <string name="course">course</string>
    <string name="course_code">course_code</string>
    <string name="status">status</string>
    <string name="notregistered">notregistered</string>
    <string name="Quit">Quit</string>
    <string name="end_register">end_register</string>
    <string name="end_registration">End registration: </string>
    <string name="active_time">Netsoul: </string>

    <!-- Titles menu sections -->
    <string name="title_section0" />
    <string name="title_section1">Home</string>
    <string name="title_section2">Calendar</string>
    <string name="title_section3">Modules</string>
    <string name="title_section4">Projects</string>
    <string name="title_section5">Log out</string>
    <string name="title_section6">Yearbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_yearbook">Yearbook</string>
    <string name="title_activity_register_token">Activity</string>

    <!-- Buttons -->
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="token_button">Validate token</string>
    <string name="return_button">Return</string>

    <!-- promos -->
    <string name="tek1">tek1</string>
    <string name="tek2">tek2</string>
    <string name="tek3">tek3</string>
    <string name="tek4">tek4</string>
    <string name="tek5">tek5</string>
    <string name="validate">Validate</string>
    <string name="close">Close</string>
    <string name="hint_token">Token</string>
    <string name="title_activity_user">User Info</string>
    <string name="user_picture">picture</string>
    <string name="phone">phone number:</string>
    <string name="placeholder">N/A</string>
    <string name="mail">mail address:</string>
    <string name="add">Add contact</string>

    <!-- campus -->
    <string name="paris">FR/PAR</string>
    <string name="bordeaux">FR/BDX</string>
    <string name="lille">FR/LIL</string>
    <string name="lyon">FR/LYN</string>
    <string name="marseille">FR/MAR</string>
    <string name="montpelliers">FR/MPL</string>
    <string name="nancy">FR/NCY</string>
    <string name="nantes">FR/NAN</string>
    <string name="nice">FR/NCE</string>
    <string name="rennes">FR/REN</string>
    <string name="strasbourgs">FR/STG</string>
    <string name="toulouse">FR/TLS</string>

</resources>
