<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/drawer_layout">


<LinearLayout
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_year"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileImg_year"
            android:layout_weight="0.90"
            android:layout_gravity="right"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/credits_year"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gpa_year"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logTime_year"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_text"
            android:text="@string/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:text="@string/placeholder"
            android:textColor="#3399CC"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mail_text"
            android:text="@string/mail"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mail_value"
            android:textColor="@color/lightBlue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/actions_size"
            android:layout_height="@dimen/actions_size"
            android:src="@drawable/ic_action_call"
            android:id="@+id/action_call"
            android:clickable="true"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="@dimen/actions_size"
            android:layout_height="@dimen/actions_size"
            android:src="@drawable/ic_action_message"
            android:id="@+id/action_message"
            android:clickable="true"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="@dimen/actions_size"
            android:layout_height="@dimen/actions_size"
            android:src="@drawable/ic_action_email"
            android:id="@+id/action_mail"
            android:clickable="true"/>

        <ImageView
            android:layout_width="@dimen/actions_size"
            android:layout_height="@dimen/actions_size"
            android:src="@drawable/ic_action_addcontact"
            android:id="@+id/action_contact"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.epitech.epidroid.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        tools:layout="@layout/drawer_projects" />

</android.support.v4.widget.DrawerLayout>